<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_title"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:id="@+id/top_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/image_border"
                android:id="@+id/washing">


                <ImageView
                    android:id="@+id/washing_imageview"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/washing_symbol"
                    />

                <TextView
                    android:id="@+id/washing_textview"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/image_border"
                android:id="@+id/bleaching">


                <ImageView
                    android:id="@+id/bleaching_imageview"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/bleaching_symbol"
                    />

                <TextView
                    android:id="@+id/bleaching_textview"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="8dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/image_border"
                android:id="@+id/drying">


                <ImageView
                    android:id="@+id/drying_imageview"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/drying_symbol"
                    />

                <TextView
                    android:id="@+id/drying_textview"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="8dp" />

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/image_border"
                android:id="@+id/ironing">


                <ImageView
                    android:id="@+id/ironing_imageview"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/ironing_symbol"
                    />

                <TextView
                    android:id="@+id/ironing_textview"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintVertical_bias="0.971">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>