<resources>
    <string name="app_name">Laundry Symbols</string>
    <string name="main_screen_title">Laundry Symbols Explained</string>
    <string name="washing">Washing</string>
    <string name="bleaching">Bleaching</string>
    <string name="drying">Drying</string>
    <string name="ironing">Ironing</string>
    <string name="symbol_image_description">Laundry Symbol Image</string>
    <string name="app_version">v.%1$s</string>
    <string name="washing_symbol">Washing Symbol</string>
    <string name="bleaching_symbol">Bleaching Symbol</string>
    <string name="drying_symbol">Drying Symbol</string>
    <string name="ironing_symbol">Ironing Symbol</string>
    <string name="laundry_symbol_item">Laundry Symbol Item</string>

    <!-- Washing Symbols -->
    <string name="do_not_wash_symbol_title">Do Not Wash</string>
    <string name="do_not_wash_symbol_description">Do Not Wash</string>
    <string name="regular_washing_allowed_symbol_title">Regular Washing Allowed</string>
    <string name="regular_washing_allowed_symbol_description">Regular Washing Allowed</string>
    <string name="washing_cold_symbol_title">Washing Cold</string>
    <string name="washing_cold_symbol_description">Washing Cold (30°C)</string>
    <string name="washing_cold_symbol_description_fahrenheit">Washing Cold (86°F)</string>
    <string name="washing_warm_symbol_title">Washing Warm</string>
    <string name="washing_warm_symbol_description">Washing Warm (40°C)</string>
    <string name="washing_warm_symbol_description_fahrenheit">Washing Warm (104°F)</string>
    <string name="washing_hot_symbol_title">Washing Hot</string>
    <string name="washing_hot_symbol_description">Washing Hot (60°C)</string>
    <string name="washing_hot_symbol_description_fahrenheit">Washing Hot (140°F)</string>
    <string name="synthetic_cycle_symbol_title">Synthetic Cycle</string>
    <string name="synthetic_cycle_symbol_description">Synthetic Cycle (30°C)</string>
    <string name="synthetic_cycle_symbol_description_fahrenheit">Synthetic Cycle (86°F)</string>
    <string name="hand_wash_symbol_title">Hand Wash</string>
    <string name="hand_wash_symbol_description">Hand Wash</string>

    <!-- Bleaching Symbols -->
    <string name="do_not_bleach_symbol_title">Do Not Bleach</string>
    <string name="do_not_bleach_symbol_description">Do Not Bleach</string>
    <string name="bleaching_allowed_symbol_title">Bleaching Allowed</string>
    <string name="bleaching_allowed_symbol_description">Bleaching Allowed</string>
    <string name="bleaching_non_chlorine_symbol_title">Bleach Non Chlorine</string>
    <string name="bleaching_non_chlorine_symbol_description">Bleach Non Chlorine</string>

    <!-- Drying Symbols -->
    <string name="do_not_dry_clean_symbol_title">Do Not Dry Clean</string>
    <string name="do_not_dry_clean_symbol_description">Do Not Dry Clean</string>
    <string name="dry_cleaning_allowed_symbol_title">Dry Cleaning Allowed</string>
    <string name="dry_cleaning_allowed_symbol_description">Dry Cleaning Allowed</string>
    <string name="dry_cleaning_low_heat_symbol_title">Dry Cleaning Low Heat</string>
    <string name="dry_cleaning_low_heat_symbol_description">Dry Cleaning Low Heat</string>
    <string name="dry_cleaning_no_steam_symbol_title">Dry Cleaning No Steam</string>
    <string name="dry_cleaning_no_steam_symbol_description">Dry Cleaning No Steam</string>
    <string name="dry_cleaning_any_solvent_symbol_title">Dry Cleaning Any Solvent</string>
    <string name="dry_cleaning_any_solvent_symbol_description">Dry Cleaning Any Solvent</string>
    <string name="dry_cleaning_only_symbol_title">Dry Cleaning Only</string>
    <string name="dry_cleaning_only_symbol_description">Dry Cleaning Only</string>
    <string name="dry_cleaning_petroleum_solvent_only_symbol_title">Dry Cleaning Petroleum Solvent Only</string>
    <string name="dry_cleaning_petroleum_solvent_only_symbol_description">Dry Cleaning Petroleum Solvent Only</string>
    <string name="tumble_dry_low_heat_symbol_title">Tumble Dry Low Heat</string>
    <string name="tumble_dry_low_heat_symbol_description">Tumble Dry Low Heat</string>
    <string name="tumble_dry_high_heat_symbol_title">Tumble Dry High Heat</string>
    <string name="tumble_dry_high_heat_symbol_description">Tumble Dry High Heat</string>
    <string name="dry_flat_symbol_title">Dry Flat</string>
    <string name="dry_flat_symbol_description">Dry Flat</string>
    <string name="hang_to_dry_symbol_title">Hang To Dry</string>
    <string name="hang_to_dry_symbol_description">Hang To Dry</string>
    <string name="do_not_tumble_dry_symbol_title">Do Not Tumble Dry</string>
    <string name="do_not_tumble_dry_symbol_description">Do Not Tumble Dry</string>

    <!-- Ironing Symbols -->
    <string name="do_not_iron_symbol_title">Do Not Iron</string>
    <string name="do_not_iron_symbol_description">Do Not Iron</string>
    <string name="ironing_allowed_symbol_title">Ironing Allowed</string>
    <string name="ironing_allowed_symbol_description">Ironing Allowed</string>
    <string name="iron_low_symbol_title">Iron Low</string>
    <string name="iron_low_symbol_description">Iron Low (Max 110° Celsius)</string>
    <string name="iron_low_symbol_description_fahrenheit">Iron Low (Max 230° Fahrenheit)</string>
    <string name="iron_medium_symbol_title">Iron Medium</string>
    <string name="iron_medium_symbol_description">Iron Medium (Max 150° Celsius)</string>
    <string name="iron_medium_symbol_description_fahrenheit">Iron Medium (Max 302° Fahrenheit)</string>
    <string name="iron_high_symbol_title">Iron High</string>
    <string name="iron_high_symbol_description">Iron High (Max 200° Celsius)</string>
    <string name="iron_high_symbol_description_fahrenheit">Iron High (Max 392° Fahrenheit)</string>
    <string name="steaming_not_allowed_symbol_title">Steaming Not Allowed</string>
    <string name="steaming_not_allowed_symbol_description">Steaming Not Allowed</string>

    <string name="how_to_do_laundry_title">How To Do Laundry Steps</string>
    <string name="how_to_do_laundry_button_text">How To Do Laundry</string>

    <!-- How To Do Laundry Categories -->
    <string name="separating_laundry">Separating Laundry</string>
    <string name="treating_stains">Treating Stains</string>
    <string name="load_detergent">Load Detergent</string>
    <string name="using_bleach">Using Bleach</string>
    <string name="adding_fabric_softener">Adding Fabric Softener</string>
    <string name="wash_cycle">Wash Cycle</string>
    <string name="wash_temperature">Wash Temperature</string>

    <!-- How To Do Laundry Categories Content Description -->
    <string name="laundry_hamper_cd">Laundry Hamper</string>
    <string name="stain_removal_cd">Stain Removal</string>
    <string name="load_detergent_cd">Load Detergent</string>
    <string name="using_bleach_cd">Using Bleach</string>
    <string name="adding_fabric_softener_cd">Adding Fabric Softener</string>
    <string name="wash_cycle_cd">Wash Cycle</string>
    <string name="wash_temperature_cd">Wash Temperature</string>

    <!-- How To Do Laundry Categories Description -->
    <string name="separating__laundry_description">
        Separate your laundry into clothes that are of the same fabric.
        One pile can be made up of heavy fabrics, the other with lightweight or thin fabrics.
        This way, it will be easier for you to choose the correct washing cycle for your clothes.
        After you separate into the type of fabric, you will need to separate by the color of the fabric.
        This will prevent colors from bleeding into each other and ruining your clothes.
    </string>
    <string name="treating_stains_description">
        Always treat stains as soon as they occur.
        You can either use a laundry detergent or a stain remover and make sure to gently rub it in.
        Let it sit for around five minutes before washing it away from the clothing item.
        You can also treat stains by letting them soak for thirty minutes in cold water.
    </string>
    <string name="loading_detergent_description">
        Depending on the type of your laundry machine, either put the detergent in the sliding drawer (of a front loading washing machine).
        Or if you have a top loading washing machine, you can put the detergent directly into the drum after filling it with water.
        Make sure to choose the correct laundry detergent for your type of washing machine.
        Also, take into account to buy a laundry detergent if you have sensitive skin or are prone to allergies.
    </string>
    <string name="using_bleach_description">
        Adding bleach to your laundry helps keep your white clothes bright.
        Make sure to look for the correct place to add it based on the type of your washing machine.
    </string>
    <string name="fabric_softener_description">
        If you want to give your clothes a soft touch or if your clothes come out of the laundry machine stiff,
        you need to add fabric softener to your laundry.
        Make sure to look for the correct place to add it based on the type of your washing machine.
    </string>
    <string name="wash_cycle_description">
        Make sure to read the care tags on your clothing. If you don\'t understand them, use <b>Laundry Symbols</b> to figure out
        what each one means. For sturdy clothing, use the normal setting on your washing machine. This usually will
        make the washing machine wash and rinse in fast cycles. If you have very dirty clothing items, then you
        will need to use the heavy duty setting.
        The permanent press setting is used for clothes that might wrinkling, which is caused by the fabrics they are made
        from. Like nylon and rayon. This will cause the washing machine to have a slower cycle at the end of the wash.
        For clothing items that are delicate, like lingerie, use the delicate cycle.
    </string>
    <string name="wash_temperature_description">
        For most of your wash cycles, it is advised to use cold water.
        This is because most detergents work well with cold water and clothes last longer when washed in cold water.
        Use hot water only when you need to wash very dirty clothes or if you are trying to sanitize them.
    </string>
    <string name="menu_content_description">Menu</string>
    <string name="home_content_description">Home</string>
    <string name="laundry_machine_content_description">Laundry Machine</string>
    <string name="temperature_unit_toggle">Temperature unit toggle, currently showing %1$s</string>
    <string name="symbol_not_found">Symbol not found</string>
    <string name="unit_celsius">Celsius</string>
    <string name="unit_fahrenheit">Fahrenheit</string>
    <string name="unit_symbol_c">°C</string>
    <string name="unit_symbol_f">°F</string>
    <string name="no_browser_found">No browser found. Install one to view this link.</string>
</resources>
